Style component library

--- a/src/components/highlight.sass
+++ b/src/components/highlight.sass
@@ -8,7 +8,7 @@
   padding: 0.5em
   color: #333333
   overflow-x: auto
-
+  
 .hljs-comment, .hljs-meta
   color: #969896
 
@@ -40,3 +40,9 @@
 
 .hljs-link
   text-decoration: underline
+
+.javascript
+  border: 1px solid hsl(202, 100%, 85%)
+  margin: 0
+  padding: 10px 20px
+  font-size: 14px
